Code enhancements